--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
 </head>
   <body class="bg-[#222] flex justify-center h-screen overflow-hidden text-text-dark antialiased">
     <div id="root" class="w-full max-w-[430px] bg-muji-bg h-full relative shadow-2xl overflow-hidden flex flex-col"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
